update baseos and node install nodejs
Signed-off-by: Ahmed Sajid <ahmed.sajid@securekey.com>

--- a/config/baseimage/Dockerfile.in
+++ b/config/baseimage/Dockerfile.in
@@ -11,6 +11,14 @@ RUN cd /tmp/scripts && \
     docker/fixup.sh && \
     common/cleanup.sh && \
     rm -rf /tmp/scripts
+
+# update system packages
+RUN apt-get update -qq \
+    && apt-get -y upgrade \
+    && apt-get clean autoclean \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/cache /var/lib/log
+
 ENV GOPATH=/opt/gopath
 ENV GOROOT=/opt/go
 ENV GOCACHE=off
