--- a/config/baseos/Dockerfile.in
+++ b/config/baseos/Dockerfile.in
@@ -10,3 +10,10 @@ RUN cd /tmp/scripts && \
     docker/init.sh && \
     common/cleanup.sh && \
     rm -rf /tmp/scripts
+
+# update system packages
+RUN apt-get update -qq \
+    && apt-get -y upgrade \
+    && apt-get clean autoclean \
+    && apt-get autoremove -y \
+    && rm -rf /var/lib/cache /var/lib/log
